--- a/plot-common/xyborder.cfg
+++ b/plot-common/xyborder.cfg
@@ -34,3 +34,4 @@ set style line 4 lt rgb vdblue lw 2 pt 10
 set style line 5 lt rgb dgreen lw 2 pt 10
 set style line 6 lt rgb dark_teal lw 2 pt 10
 
+set size 1, 0.6
